<resources>

    <string name="languageTitle">Language</string>
    <!-- language key -->
    <string name="language_key">language</string>
    <!--  language labels-->
    <string name="pref_language_label_english">English</string>
    <string name="pref_language_label_Swedish">Swedish</string>
    <!--  language keys-->
    <string name="pref_language_value_english" translatable="false">en</string>
    <string name="pref_language_value_Swedish" translatable="false">sv</string>
    <string name="app_name">project 2</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="chooseLanguage">Choose language</string>
    <!--Theme  -->
    <string name="theme_key" translatable="false">light_mode</string>
    <string name="theme">Theme</string>
    <string name="lightModeOn">Light theme is on</string>
    <string name="lightModeOff">Light theme is off</string>

    <!-- home page  -->
    <string name="writing">Writing</string>
    <string name="vocabulary">Vocabulary</string>
    <!-- navigation menu  -->
    <string name="nav_profile">Profile</string>
    <string name="nav_result">My Result</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_about">About us</string>
    <string name="nav_help">Help</string>
    <string name="nav_logout">Log out</string>
    <!-- choose difficulty popup -->
    <string name="choose_level_title">Choose your level</string>
    <!-- buttons -->
    <string name="btn_cancel">Cancel</string>
    <!-- Profile -->
    <string name="test">Test</string>
    <string name="questions">Questions</string>
    <string name="user_image">User image</string>
    <!-- level popup -->
    <string name="choose_your_level">Choose your Level</string>
    <!-- log in and sign up -->
    <string name="spinner_defaultEnglish">Choose a role</string>
    <string name="loginSignUpTextEnglish">Dont have an account? Sign up</string>
    <string name="loginEmailHintEnglish">E-mail</string>
    <string name="loginPasswordHintEnglish">Password</string>
    <string name="loginButtonText">Log in</string>
    <string name="signUpfullNameHintEnglish">Full name</string>
    <string name="signUpEmailHintEnglish">E-mail</string>
    <string name="signUpCountryHintEnglish">Country</string>
    <string name="signUpPasswordHintEnglish">Password</string>
    <string name="signUpConfirmPasswordHintEnglish">Confirm password</string>
    <string name="signUpButtonTextEnglish">SIGN UP</string>
    <string name="signUpChooseRoleLable">Choose a role:</string>
    <string name="Edit">Edit</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="exit_without_submitting_message">Do you want to Exit without submitting the test?</string>
    <string name="submit">Submit</string>
<<<<<<< HEAD
    <string name="total_questions">Total Questions:  </string>
    <string name="correct_answers">Correct Answers:  </string>
    <string name="wrong_answers">Wrong Answers: </string>
    <string name="try_aging">Try again</string>
=======
    <string name="total_questions">Total Questions:&#160;</string>
    <string name="correct_answers">Correct Answers:&#160;</string>
    <string name="wrong_answers">Wrong Answers:&#160;</string>
    <string name="try_aging">Tyr again</string>
>>>>>>> 95ac2860bd1ea25df3c29ba7bae1754b24f3cc80
    <string name="writing_text">This paper integrates elements from the theory of agency, the theory of property rights and the theory of finance to develop a theory of the ownership structure of the firm. Firstly, we define the concept of agency costs and show its relationship to the ‘separation and control issue. ___1___, we investigate the nature of the agency costs generated by the existence of debt and outside equity, demonstrate who bears these costs and why, and investigate the Pareto optimality of their existence. ___2___, we provide a new definition of the firm, and show how our analysis of the factors influencing the creation and issuance of debt and equity claims is a special case of the supply side of the completeness of markets problem.he directors of such [joint-stock] companies, ___3___, being the managers rather ofside property rights and the theory of finance to develop a theory of the ownership property rights and the theory of finance to develop a theory of the ownership property rights and the theory of finance to develop a theory of the ownership property rights and the theory of finance to develop a theory of the ownership property rights and the theory of finance to develop a theory of the ownership property rights and the theory of finance to develop a theory of the ownership property rights and the theory of finance to develop a theory of the ownership property rights and the theory of finance to develop a theory of the ownership property rights and the theory of finance to develop a theory of the ownership"</string>
    <string name="writing_question_text">"Choose the most likely linking word/phrase to fill each gap click the gap to show choices";</string>
    <string name="percent" translatable="false">%</string>
    <!-- Error messages  -->
    <string name="error_name_required">Fullname is required</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_country_required">Country is required</string>
    <string name="error_invalid_email">Please enter valid email</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_short_password">Min password length should be 6 character</string>
    <string name="error_passwords_not_matching">Password dose not match</string>
    <!-- messages -->
    <string name="message_signing_up">Signing up....</string>
    <string name="TermsOfUseTextEnglish">
        By continuing, you agree to accept our
        Privacy Policy &amp; Terms of Service.
    </string>
    <string name="button">Button</string>
    <string name="lesson">Lesson %1$d </string>
    <string name="lessonForLessons">Lesson</string>

    <!-- Javad & Daniel -->
    <string name="reading">Reading</string>
    <string name="listening">Listening</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="x">X</string>
    <string-array name="studentOrTeacherEnglish">
        <item>Student</item>
        <item>Teacher</item>
    </string-array>

    <string name="lesson_1">Lesson 1</string>
    <string name="dear_colleagues_the_erasmus_agreement_between_our_institutions_information_and_communication_technologies_expires_in_2020_we_would_like_to_extend_our_cooperation_for_the_academic_year_2020_2021_for_us_an_e_mail_confirmation_is_sufficient_therefore_could_you_please_confirm_that_you_agree_that_we_prolong_the_agreement_for_one_academic_year_kind_regards_from_the_university_of_rijeka_mathew_jones">Dear Colleagues, The Erasmus agreement between our institutions (Information and Communication Technologies) expires in 2020. We would like to extend our cooperation for the academic year 2020/2021. For us an e-mail confirmation is sufficient. Therefore, could you please confirm that you agree that we prolong the agreement for one academic year? Kind regards from the University of Rijeka, Mathew Jones</string>

    <string name="_1_what_is_the_title_of_the_topic">1 - What is the title of the topic?</string>
    <string name="your_choice_1">Your choice 1</string>
    <string name="your_choice_2">Your choice 2</string>
    <string name="your_choice_3">Your choice 3</string>
    <string name="_0_11">0:11</string>
    <string name="_1_11">1:11</string>
    <string name="image">image</string>
    <string name="about_us">About us</string>

    <string name="readingText">Dear Colleagues,
        The Erasmus agreement between our institutions (Information and Communication Technologies) expires in 2020.
        We would like to extend our cooperation for the academic year 2020/2021.
        For us an e-mail confirmation is sufficient.
        Therefore, could you please confirm that you agree that we prolong the agreement for one academic year?
        Kind regards from the University of Rijeka, Mathew Jones
    </string>

    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="listeningText">
        You have 30 seconds to read the questions below.
        Listen to the audio, choose one of the suggested options.The recording plays twice.
    </string>

    <string name="readingDes">
        Read the following text carefully and answer the questions.
    </string>

    <string name="appText">The goal of this app is to make the process of learning language easy and fun. We hope that this app is useful for you.</string>

    <string name="groupText">We are a group of students that have worked on this application for a project assignment.</string>

    <string name="educationText">This application is for people who want to learn english. It does not matter if you just started to learn english or want learn more advanced english.</string>

    <string name="contactUs">If you have any questions about the app or want to contact us feel free to send an e-mail and we will answer as soon as possible. Languageapp@email.com</string>

</resources>
