<?xml version="1.0" encoding="utf-8"?>
<!-- TODO create this file -->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory
        android:title="@string/theme">
        <androidx.preference.CheckBoxPreference
            android:key="light_mode"
            android:title="Light Mode"
            android:summaryOff="@string/lightModeOff"
            android:summaryOn="@string/lightModeOn"
            android:defaultValue="true"/>

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/languageTitle">
        <androidx.preference.ListPreference
            android:entries="@array/pref_language_options_label"
            android:defaultValue="@string/pref_language_value_english"
            android:entryValues="@array/pref_language_option_values"
            android:title="@string/chooseLanguage"
            android:key="@string/language_key"/>
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>