<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/profile_nav"
        android:title="@string/nav_profile"
        android:icon="@drawable/ic_profile"/>
    <item android:id="@+id/results_nav"
        android:title="@string/nav_result"
        android:icon="@drawable/ic_result"
        />
    <item android:id="@+id/settings_nav"
        android:title="@string/nav_setting"
        android:icon="@drawable/ic_settings"/>
    <item android:id="@+id/about_us_nav"
        android:title="@string/nav_about"
        android:icon="@drawable/ic_about_us"/>
    <item android:id="@+id/help_nav"
        android:title="@string/nav_help"
        android:icon="@drawable/ic_help"/>
    <item android:id="@+id/log_out_nav"
        android:title="@string/nav_logout"
        android:icon="@drawable/ic_about_us"/>
</menu>