<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="275dp"
    android:layout_height="350dp"

    android:background="@drawable/popup_shape"
    android:layout_gravity="center"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_level"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/chooseBeginnerLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beginner"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_corner"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/chooseIntermediateLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intermediate"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/rounded_corner"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/chooseAdvancedLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advanced"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_corner"
            android:layout_margin="10dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/btn_cancel"
            android:background="@drawable/button_shape"
            android:id="@+id/popupCancelBtn"
            android:layout_marginTop="40dp"/>

    </LinearLayout>
</LinearLayout>