<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="300dp"
    android:background="@drawable/popup_shape">


    <ImageView
        android:id="@+id/closeDialog"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_close"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"/>
    <ImageView
        android:id="@+id/status_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/happy_emoji"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/dialogLessonTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lesson 1"
        android:textSize="20sp"
        android:layout_below="@id/status_image"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/dialogLessonTitle">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp">
            <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_questions"/>
            <TextView
                android:id="@+id/resultDialogTotalQuestions"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:textColor="@color/green"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct_answers"/>
            <TextView
                android:textColor="@color/green"
                android:id="@+id/resultDialogCorrectAnswers"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:textColor="@color/red"

                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wrong_answers"/>
            <TextView
                android:id="@+id/resultDialogWrongAnswers"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/resultDialogTryAgain"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_shape"
        android:text="@string/try_aging"
        android:textAllCaps="false" />

</RelativeLayout>